@@ -44,6 +44,26 @@ function suite(name: string, define: () => void): void {
 const makeTempDir = () => fs.mkdtempSync(path.join(os.tmpdir(), "weftend-privacy-lint-"));
 
 suite("runtime/privacy lint", () => {
+  register("analysis wildcard JSON files are linted for privacy patterns", () => {
+    const root = makeTempDir();
+    const analysisDir = path.join(root, "analysis");
+    fs.mkdirSync(analysisDir, { recursive: true });
+    const wildcardJson = path.join(analysisDir, "new_adapter_surface_v0.json");
+    fs.writeFileSync(
+      wildcardJson,
+      JSON.stringify({
+        schema: "weftend.adapterSummary/0",
+        note: "C:\\\\Users\\\\alice\\\\secret",
+      }),
+      "utf8"
+    );
+
+    const fixedBuild = { algo: "sha256", digest: "sha256:22222222", source: "NODE_MAIN_JS" } as any;
+    const result = runPrivacyLintV0({ root, weftendBuild: fixedBuild });
+    assertEq(result.report.verdict, "FAIL", "expected FAIL verdict for analysis wildcard json path leakage");
+    assert(result.report.violations.some((v) => v.code === "ABS_PATH_WIN"), "expected ABS_PATH_WIN from wildcard analysis json");
+  });
+
   register("README allows reasonCodes WEFTEND_ only on approved line", () => {
     const root = makeTempDir();
     const readmeDir = path.join(root, "weftend");
